Fixed create post spacing

--- a/css/_create-post.scss
+++ b/css/_create-post.scss
@@ -11,8 +11,8 @@
         align-items: center;
         justify-content: center;
 
-        .add-image-button {
-            margin: 1rem 0;
+        * {
+            margin: 0.2rem 0;
         }
     }
 
@@ -66,124 +66,3 @@
 
     }
 }
-
-// .create-post-form {
-//     margin: 0 5vw;
-//     padding-bottom: 30vh;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     justify-content: center;
-
-//     #images-form {
-//         width: 100%;
-//         display: flex;
-//         flex-direction: column;
-//         align-items: center;
-//         justify-content: center;
-
-//         .top-form {
-//             display: flex;
-//             align-items: center;
-//             justify-content: center;
-//             flex-direction: column;
-
-//             >* {
-//                 margin: 0.2rem 0;
-//             }
-//         }
-
-//         .image-form-div {
-//             width: 100%;
-//             margin-bottom: 0.2rem;
-
-//             .image-div {
-//                 flex-direction: column;
-//                 align-items: center;
-//                 justify-content: center;
-//                 width: 100%;
-//                 height: $post-height-mobile;
-//                 background: $black;
-//                 background-size: contain;
-//                 background-position: center;
-//                 background-repeat: no-repeat;
-
-//                 img {
-//                     object-fit: contain;
-//                     /* Scale the image to cover the entire div */
-//                     max-width: 100%;
-//                     max-height: 100%;
-//                     width: 100%;
-//                 }
-//             }
-
-//             .input-buttons-div {
-//                 margin: 0.3rem 0;
-//                 display: flex;
-//                 align-items: center;
-//                 flex-direction: column;
-//                 justify-content: center;
-
-//                 >* {
-//                     margin: 0.2rem 0;
-//                 }
-
-//                 input {
-//                     max-width: 80%;
-//                     cursor: pointer;
-//                     border: $border;
-//                     border-radius: 0.2rem;
-//                 }
-//             }
-//         }
-//     }
-
-//     #caption-form {
-//         width: 100%;
-//         display: flex;
-//         flex-direction: column;
-//         align-items: center;
-//         justify-content: center;
-
-//         >* {
-//             margin: 0.2rem 0;
-//         }
-
-//         textarea {
-//             width: 100%;
-//             height: 5rem;
-//             resize: none;
-//         }
-//     }
-
-//     .btn {
-//         font-weight: bold;
-//     }
-// }
-
-
-// @media screen and (min-aspect-ratio: $desktop-aspect-ratio) {
-//     .create-post-form {
-//         margin: 0 10vw;
-//         display: flex;
-//         align-items: center;
-//         justify-content: center;
-
-//         #images-form {
-//             .image-form-div {
-//                 .image-div {
-//                     margin: auto;
-//                     width: $post-width-desktop !important;
-//                     height: $post-height-desktop !important;
-//                 }
-//             }
-//         }
-
-//         #caption-form {
-//             textarea {
-//                 max-width: 60%;
-//                 height: 5rem;
-//             }
-//         }
-//     }
-// }
